# postcard-syntax-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
backend/: run_analysis.py  service.py
backend/src/postcard_syntax_analyzer/: dataframe_processor.py  formatters.py  stat_aliases.py  syntax_analyzer.py  syntax_constants.py
frontend/: index.html  main.js  styles.css
notebooks/: 01_preprocessing.ipynb  02_analysis.ipynb  03_clustering.ipynb
